another update pass
less than 500 compile errors left now